--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "7ec3552c",
    "metadata": {
     "collapsed": false,
@@ -13,13 +13,602 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import dask.dataframe as dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dfda6dac",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ir_dd = dd.accessor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "49a9a1b6",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/BDIR7R/synthetic'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DATA_DIR = Path(\"../data/BDIR7R/\")\n",
+    "dtset = (DATA_DIR / \"synthetic\")\n",
+    "dtset = dtset.as_posix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e5f27108",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>education_years</th>\n",
+       "      <th>anc_visits</th>\n",
+       "      <th>skilled_delivery</th>\n",
+       "      <th>facility_delivery</th>\n",
+       "      <th>complications</th>\n",
+       "      <th>sys_bp</th>\n",
+       "      <th>dia_bp</th>\n",
+       "      <th>heart_rate</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>district_id</th>\n",
+       "      <th>preeclampsia_risk</th>\n",
+       "      <th>gdm_risk</th>\n",
+       "      <th>high_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>31.071200</td>\n",
+       "      <td>4.137200</td>\n",
+       "      <td>3.89960</td>\n",
+       "      <td>0.754400</td>\n",
+       "      <td>0.773700</td>\n",
+       "      <td>0.239700</td>\n",
+       "      <td>126.148700</td>\n",
+       "      <td>81.74150</td>\n",
+       "      <td>79.11030</td>\n",
+       "      <td>96.087400</td>\n",
+       "      <td>33.440700</td>\n",
+       "      <td>0.316000</td>\n",
+       "      <td>0.086000</td>\n",
+       "      <td>0.168200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.974772</td>\n",
+       "      <td>2.814279</td>\n",
+       "      <td>2.06832</td>\n",
+       "      <td>0.430464</td>\n",
+       "      <td>0.418456</td>\n",
+       "      <td>0.426922</td>\n",
+       "      <td>13.719957</td>\n",
+       "      <td>10.65592</td>\n",
+       "      <td>10.45394</td>\n",
+       "      <td>19.924419</td>\n",
+       "      <td>18.704354</td>\n",
+       "      <td>0.464936</td>\n",
+       "      <td>0.280378</td>\n",
+       "      <td>0.374062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>50.00000</td>\n",
+       "      <td>50.00000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>116.000000</td>\n",
+       "      <td>74.00000</td>\n",
+       "      <td>72.00000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>82.00000</td>\n",
+       "      <td>78.00000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>136.000000</td>\n",
+       "      <td>89.00000</td>\n",
+       "      <td>86.00000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>176.000000</td>\n",
+       "      <td>113.00000</td>\n",
+       "      <td>120.00000</td>\n",
+       "      <td>163.000000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                age  education_years   anc_visits  skilled_delivery  \\\n",
+       "count  10000.000000     10000.000000  10000.00000      10000.000000   \n",
+       "mean      31.071200         4.137200      3.89960          0.754400   \n",
+       "std        9.974772         2.814279      2.06832          0.430464   \n",
+       "min       15.000000         0.000000      0.00000          0.000000   \n",
+       "25%       22.000000         1.000000      3.00000          1.000000   \n",
+       "50%       31.000000         4.000000      4.00000          1.000000   \n",
+       "75%       40.000000         6.000000      5.00000          1.000000   \n",
+       "max       49.000000        12.000000     10.00000          1.000000   \n",
+       "\n",
+       "       facility_delivery  complications        sys_bp       dia_bp  \\\n",
+       "count       10000.000000   10000.000000  10000.000000  10000.00000   \n",
+       "mean            0.773700       0.239700    126.148700     81.74150   \n",
+       "std             0.418456       0.426922     13.719957     10.65592   \n",
+       "min             0.000000       0.000000     80.000000     50.00000   \n",
+       "25%             1.000000       0.000000    116.000000     74.00000   \n",
+       "50%             1.000000       0.000000    127.000000     82.00000   \n",
+       "75%             1.000000       0.000000    136.000000     89.00000   \n",
+       "max             1.000000       1.000000    176.000000    113.00000   \n",
+       "\n",
+       "        heart_rate       glucose   district_id  preeclampsia_risk  \\\n",
+       "count  10000.00000  10000.000000  10000.000000       10000.000000   \n",
+       "mean      79.11030     96.087400     33.440700           0.316000   \n",
+       "std       10.45394     19.924419     18.704354           0.464936   \n",
+       "min       50.00000     60.000000      1.000000           0.000000   \n",
+       "25%       72.00000     83.000000     17.000000           0.000000   \n",
+       "50%       78.00000     95.000000     34.000000           0.000000   \n",
+       "75%       86.00000    107.000000     50.000000           1.000000   \n",
+       "max      120.00000    163.000000     64.000000           1.000000   \n",
+       "\n",
+       "           gdm_risk     high_risk  \n",
+       "count  10000.000000  10000.000000  \n",
+       "mean       0.086000      0.168200  \n",
+       "std        0.280378      0.374062  \n",
+       "min        0.000000      0.000000  \n",
+       "25%        0.000000      0.000000  \n",
+       "50%        0.000000      0.000000  \n",
+       "75%        0.000000      0.000000  \n",
+       "max        1.000000      1.000000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/synthetic/synthetic_bdhs_10k.csv\")\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b7ca1d19",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>education_years</th>\n",
+       "      <th>wealth_quintile</th>\n",
+       "      <th>urban_rural</th>\n",
+       "      <th>anc_visits</th>\n",
+       "      <th>skilled_delivery</th>\n",
+       "      <th>facility_delivery</th>\n",
+       "      <th>complications</th>\n",
+       "      <th>sys_bp</th>\n",
+       "      <th>dia_bp</th>\n",
+       "      <th>heart_rate</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>district_id</th>\n",
+       "      <th>preeclampsia_risk</th>\n",
+       "      <th>gdm_risk</th>\n",
+       "      <th>high_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>36</td>\n",
+       "      <td>4</td>\n",
+       "      <td>poorest</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>richest</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>richest</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
+       "      <td>5</td>\n",
+       "      <td>richer</td>\n",
+       "      <td>rural</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>richer</td>\n",
+       "      <td>rural</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  education_years wealth_quintile urban_rural  anc_visits  \\\n",
+       "0   36                4         poorest       urban           5   \n",
+       "1   16                4         richest       urban           3   \n",
+       "2   32                5         richest       urban           5   \n",
+       "3   21                5          richer       rural           1   \n",
+       "4   18                6          richer       rural           2   \n",
+       "\n",
+       "   skilled_delivery  facility_delivery  complications  sys_bp  dia_bp  \\\n",
+       "0                 1                  1              0   129.0    83.0   \n",
+       "1                 1                  1              0   107.0    71.0   \n",
+       "2                 1                  1              1   147.0    78.0   \n",
+       "3                 1                  1              0   116.0    91.0   \n",
+       "4                 1                  1              1   153.0    98.0   \n",
+       "\n",
+       "   heart_rate  glucose  district_id  preeclampsia_risk  gdm_risk  high_risk  \n",
+       "0        94.0    124.0           22                  0         0          0  \n",
+       "1       105.0     65.0           58                  0         0          0  \n",
+       "2        86.0     60.0           29                  1         0          0  \n",
+       "3        69.0     86.0           50                  1         0          0  \n",
+       "4        97.0     78.0           39                  1         0          1  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bac4567b",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['calibration',\n",
+       " 'clone',\n",
+       " 'cluster',\n",
+       " 'compose',\n",
+       " 'config_context',\n",
+       " 'covariance',\n",
+       " 'cross_decomposition',\n",
+       " 'datasets',\n",
+       " 'decomposition',\n",
+       " 'discriminant_analysis',\n",
+       " 'dummy',\n",
+       " 'ensemble',\n",
+       " 'exceptions',\n",
+       " 'experimental',\n",
+       " 'externals',\n",
+       " 'feature_extraction',\n",
+       " 'feature_selection',\n",
+       " 'frozen',\n",
+       " 'gaussian_process',\n",
+       " 'get_config',\n",
+       " 'impute',\n",
+       " 'inspection',\n",
+       " 'isotonic',\n",
+       " 'kernel_approximation',\n",
+       " 'kernel_ridge',\n",
+       " 'linear_model',\n",
+       " 'manifold',\n",
+       " 'metrics',\n",
+       " 'mixture',\n",
+       " 'model_selection',\n",
+       " 'multiclass',\n",
+       " 'multioutput',\n",
+       " 'naive_bayes',\n",
+       " 'neighbors',\n",
+       " 'neural_network',\n",
+       " 'pipeline',\n",
+       " 'preprocessing',\n",
+       " 'random_projection',\n",
+       " 'semi_supervised',\n",
+       " 'set_config',\n",
+       " 'show_versions',\n",
+       " 'svm',\n",
+       " 'tree']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "60de4c14",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ClassicalMDS',\n",
+       " 'Isomap',\n",
+       " 'LocallyLinearEmbedding',\n",
+       " 'MDS',\n",
+       " 'SpectralEmbedding',\n",
+       " 'TSNE',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '_barnes_hut_tsne',\n",
+       " '_classical_mds',\n",
+       " '_isomap',\n",
+       " '_locally_linear',\n",
+       " '_mds',\n",
+       " '_spectral_embedding',\n",
+       " '_t_sne',\n",
+       " '_utils',\n",
+       " 'locally_linear_embedding',\n",
+       " 'smacof',\n",
+       " 'spectral_embedding',\n",
+       " 'trustworthiness']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(sklearn.manifold)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a9a1b6",
+   "id": "8feb6d4a",
    "metadata": {},
    "outputs": [],
    "source": []
